<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.haja4.myapplication.MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/endMsg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_msg1"
        android:textSize="25dp"
        />

    <TextView
        android:id="@+id/endMsg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_msg2"
        android:textSize="25dp"
        />

    <TextView
        android:id="@+id/endMsg3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_msg3"
        android:textSize="25dp"
        />

    <Button
        android:id="@+id/backStartBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/back_start" />

</LinearLayout>

</android.support.constraint.ConstraintLayout>