<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.haja4.myapplication.TitleActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/homeMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_msg"
        android:textSize="25dp"
        />

    <Button
        android:id="@+id/startBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/start_but" />

    <Button
        android:id="@+id/recordBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_but" />
</LinearLayout>

</android.support.constraint.ConstraintLayout>